# rag-hackathon

./: .gitignore  README.md  convert_to_json.ipynb  flatshare_ids.csv  listings.csv  package.json  pyproject.toml  scrape.py
backend/: .dockerignore  .env.example  Dockerfile  data.py  deploy.sh  main.py  pyproject.toml  requirements.txt  run_docker_local.sh  setup-secrets.sh  update_secret.sh  voice_server.py
backend/app/: config.py  dependencies.py  main.py
backend/app/routers/: chat.py
backend/app/services/: chat_service.py  match_service.py
backend/clients/: __init__.py  openai_client.py  redis_client.py
frontend/: deploy.sh  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  index.css  theme.ts
frontend/src/api/: chat.ts  client.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: ChatPanel.jsx  ChatPanel.tsx  ListingsPanel.jsx  ListingsPanel.tsx  RulesPanel.jsx  RulesPanel.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useChatController.ts  useConversation.ts  useRules.ts  useSavedListings.ts
frontend/src/lib/: supabase.ts
frontend/src/pages/: Login.tsx
frontend/src/types/: index.ts  supabase.ts
scraping/: get_flats.py  get_listing.py  index_listings_redisvl.py  listing_response.txt  listings-1400754120.csv  listings-1400760814.csv  listings.csv  listings_clean.csv  query.py  response.txt  scrape.py
scripts/: redis_sync.py
specs/: implementation_plan.md  spare_room_ui_api_full.txt
supabase/: config.toml  schema.sql
supabase/migrations/: 20251213181354_fix_profile_policy.sql
(+1 files in other folders)
