[project]
name = "rag-hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "RobinHaljakLendable",email = "robin.haljak@lendable.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pandas (>=2.3.3,<3.0.0)",
    "openai (>=2.9.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "redis (>=5.0,<7.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "redisvl (>=0.12.1,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
